# rope-framework

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HOW_TO_CRITICIZE.md  KNOWN_LIMITATIONS.md  LICENSE  Makefile  README.md  ZENODO_RELEASE_NOTES.md  __init__ (1).py  __init__ (2).py  __init__.py  alpha_variation.py  atomic_mass_from_nucleons.py  claims.yaml  coarse_graining_stiffness.py  compact_u1_mc.py  current_continuity.py  defect_theory.py  defect_topology_3d.py  ferromagnetic_alignment.py  gamma_identification.py  gauge_geometry.py  heavy_hydride_asymptote.py  helix_circulation.py  hydrogen_bond_ordering.py  internal_mode_dichotomy.py  internal_symmetry_theorem.py  joint_relaxation_core_survival.py  kink_transport_toy.py  knot_excitation_spectrum.py  lattice_lorentz_bound.py  longitudinal_sector_resolution.py  lorentz_force.py  magnetic_force.py  matter_lorentz_inaccessibility.py  metallic_spacing_selfconsistent.py  mode_bath_gamma.py  mode_overlap_harness.py  no_monopole_lemma.py  (+21 more)
analysis/: magnetic_density_hypothesis.py  stiffness_and_circulation.py
benchmark_results/: benchmark_catalogue.txt  convergence_output.txt  open_problems.txt  physics_validation_output.txt  reproduction_output.txt  summary.json  validation_output.txt
benchmarks/: reproduce_results.py
docs/: API.md  API_STABILITY.md  BENCHMARKS.md  EXTERNAL_REVIEW_PACKAGE.md  FABLE5_PROMPT_mode_overlap.md  FUTURE_MODEL_PROMPT_one_fence.md  INSTRUMENTS.md  MANIFEST.md  MODE_OVERLAP_DERIVATION.md  OPEN_PROBLEM_mode_overlap.md  PAPERS.md  PROGRAMME_OVERVIEW.md  RELEASE_NOTES_v2.2.4.md  SUGGESTED_ISSUES.md  (+15 more)
(+194 files in other folders)
