[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rope_solver"
version = "2.2.3"
description = "Computational toolkit for rope solitons: solver, topology, relaxation, validation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mark Palmer"}]
dependencies = ["numpy>=1.21", "scipy>=1.7", "sympy>=1.9", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "PyYAML>=6.0"]

[project.urls]
Zenodo = "https://doi.org/10.5281/zenodo.21430784"
Repository = "https://github.com/mrpalmer100/rope-framework"

[tool.setuptools]
packages = ["rope_solver", "rope_solver.psi", "rope_solver.topology",
            "rope_solver.geometry", "rope_solver.relaxation",
            "rope_solver.gravity", "rope_solver.spectrum", "rope_solver.particles",
            "rope_solver.electromagnetism"]
